# QMLDashboard

./: CMakeLists.txt  Main.qml  README.md  backendhelper.cpp  backendhelper.hpp  main.cpp  resources.qrc
Components/RightSide/: BasePage.qml  DashboardPage.qml  GenericPage.qml
Components/Sidebar/: Sidebar.qml  SidebarFooter.qml  SidebarHeader.qml  SidebarList.qml
